Weather API componet added

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 # API Keys - Replace with your actual API keys
-REACT_APP_OPENWEATHER_API_KEY=your_actual_openweather_api_key_here
+REACT_APP_OPENWEATHER_API_KEY=d0ee07b05153f43229d82066857c2665
 REACT_APP_UNSPLASH_ACCESS_KEY=your_actual_unsplash_access_key_here
+
+# Weather API Configuration
+REACT_APP_WEATHER_API_URL=https://api.openweathermap.org/data/2.5
 
 # Optional: If you're using Unsplash's secret key for certain operations
 REACT_APP_UNSPLASH_SECRET_KEY=your_actual_unsplash_secret_key_here
